form array working with multiple post

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,19 @@
-.main-box{
+.main-box {
     max-width: 800px;
-    margin-top: 6%;
-}
+    margin: 3% auto;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  
+  .buttons {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+
+  .text-right{
+    text-align: right;
+  }
